syntax = "proto3";

package cart;

option java_package = "com.example.grpc.cart.stubs";
option java_multiple_files = true;

message CartUpdateRequest {
  string user_id = 1;
  int32 version_number = 2;
  repeated CartUpdateRequestEntry entries = 3;

  message CartUpdateRequestEntry {
    string product_id = 1;
    string product_name = 2;
    int32 qty_adjustment = 3;
    CartAction action = 4;
  }

  enum CartAction {
    QTY_CHANGE = 0;
    DROP_ITEM = 1;
    ABANDON_CART = 2;
  }
}

service CartService {
  rpc cartUpdateRequest (CartUpdateRequest) returns (CartUpdateRequestResult);
}

message CartUpdateRequestResult {
  bool success = 1;
  string message = 2;
}
